add test for teamid endpoint, fix missing slash, fix return as arrays.aslist